Change VLAN name to use vlan_name variable

--- a/test_vlan.yml
+++ b/test_vlan.yml
@@ -8,5 +8,5 @@
       cisco.ios.ios_vlans:
         config:
           - vlan_id: "{{ vlan_id | int }}"
-            name: "VLAN_{{ vlan_id }}"
+            name: "{{ vlan_name }}"
         state: merged
